prod-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrc-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qrc-web
  template:
    metadata:
      labels:
        app: qrc-web
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: qrc-container
        image: 822493497751.dkr.ecr.ap-south-1.amazonaws.com/qrc-onpremises:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qrc-service
  namespace: default
spec:
  selector:
    app: qrc-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
