ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qrc-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - qrc-local.test
    secretName: qrc-limit-tls-secret
  rules:
  - host: qrc-local.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qrc-service
            port:
              number: 80
